2004-02-12  Jason R. Mastaler  <jason@mastaler.com>

	* TMDA 1.1.2 is released.

2004-02-09  Jason R. Mastaler  <jason@mastaler.com>

	* TMDA 1.1.1 is released.

2004-01-27  Jason R. Mastaler  <jason@mastaler.com>

	* THANKS (Contributions): Add Maurizio Speranza.
	
2003-12-19  Jason R. Mastaler  <jason@mastaler.com>

	* TMDA 1.0 is released.

2003-12-10  Jason R. Mastaler  <jason@mastaler.com>

	* TMDA 0.92 is released.

2003-12-03  Jason R. Mastaler  <jason@mastaler.com>

	* TMDA 0.91 is released.

2003-11-26  Jason R. Mastaler  <jason@mastaler.com>

	* TMDA 0.90 is released.

2003-11-16  Jason R. Mastaler  <jason@mastaler.com>

	* TMDA 0.89 is released.

2003-11-12  Jason R. Mastaler  <jason@mastaler.com>

	* TMDA 0.88 is released.

2003-10-13  Jason R. Mastaler  <jason@mastaler.com>

	* TMDA 0.87 is released.

2003-10-07  Jason R. Mastaler  <jason@mastaler.com>

	* THANKS (Contributions): Add Dave Steinberg

2003-10-04  Jason R. Mastaler  <jason@mastaler.com>

	* THANKS (Contributions): Add Kimmo Suominen.

2003-10-02  Jason R. Mastaler  <jason@mastaler.com>

	* THANKS (Contributions): Add Sergei Kolobov.

2003-10-02  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>

	* TMDA 0.86 is released.

2003-09-24  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>

	* TMDA 0.85 is released.

2003-09-01  Jason R. Mastaler  <jasonrm@mastaler.com>

	* TMDA 0.84 is released.

2003-08-21  Jason R. Mastaler  <jason@mastaler.com>

	* TMDA 0.83 is released.

2003-08-06  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>

	* THANKS (Contributions): Add Slawek 'IDEall' Fydryk and Jason
	Andrade.
	
2003-08-01  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>

	* TMDA 0.82 is released.

2003-07-23  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>

	* THANKS (Contributions): Add Tim Rice.

2003-07-22  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>

	* TMDA 0.81 is released.

2003-06-11  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>
