@@ -1,3 +1,7 @@
+2004-02-19  Jason R. Mastaler  <jason@mastaler.com>
+
+	* THANKS (Contributions): Add David Bremner.
+	
 2004-02-12  Jason R. Mastaler  <jason@mastaler.com>
 
 	* TMDA 1.1.2 is released.
